--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.5.0
 anyio==3.7.1
+asn1crypto==1.5.1
 boltons==23.0.0
 Brotli==1.0.9
+cbor2==5.4.6
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.2.0
@@ -23,7 +25,7 @@ pip==23.1.2
 pluggy==1.2.0
 pycosat==0.6.4
 pycparser==2.21
-pydantic==2.0.2
+pydantic==1.10.11
 pydantic_core==2.1.2
 pyOpenSSL==23.2.0
 PySocks==1.7.1
@@ -42,6 +44,7 @@ urllib3==2.0.3
 uvicorn==0.22.0
 uvloop==0.17.0
 watchfiles==0.19.0
+webauthn==1.9.0
 websockets==11.0.3
 wheel==0.40.0
 zstandard==0.19.0
